--- a/BaseConfig.env
+++ b/BaseConfig.env
@@ -67,7 +67,7 @@ MEMORY_INDEX=auto-gpt
 ## REDIS_PORT - Redis port (Default: 6379)
 ## REDIS_PASSWORD - Redis password (Default: "")
 ## WIPE_REDIS_ON_START - Wipes data / index on start (Default: True)
-REDIS_HOST=redis-finx
+REDIS_HOST=redis
 REDIS_PORT=6379
 WIPE_REDIS_ON_START=FALSE
 
