--- a/BaseConfig.env
+++ b/BaseConfig.env
@@ -185,4 +185,4 @@ WIPE_REDIS_ON_START=FALSE
 ################################################################################
 ### ALLOWLISTED PLUGINS
 ################################################################################
-ALLOWLISTED_PLUGINS=FinX
+ALLOWLISTED_PLUGINS=Finxgpt,
